--- a/po/nl_NL/menu.po
+++ b/po/nl_NL/menu.po
@@ -20,9 +20,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-04-14 00:18+0000\n"
-"Last-Translator: Kevin Levie <kevin@levity.nl>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: Dutch (http://www.transifex.com/civicrm/civicrm/language/nl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -139,8 +139,8 @@ msgid "Case Activity"
 msgstr "Dossieractiviteit"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Dossierrapport"
+msgid "Case Activity Audit"
+msgstr "Dossieractiviteitsonderzoek"
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -159,8 +159,8 @@ msgid "Assign to Another Client"
 msgstr "Aan andere cliënt toewijzen"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "Activiteit naar dossier converteren"
+msgid "File on Case"
+msgstr "Bestand van dossier"
 
 msgctxt "menu"
 msgid "Case Details"
@@ -184,10 +184,6 @@ msgstr "Dossierstatussen"
 msgctxt "menu"
 msgid "Encounter Mediums"
 msgstr "Ontmoetingswijzen"
-
-msgctxt "menu"
-msgid "Change Activity Status"
-msgstr "Activiteitstatus wijzigen"
 
 msgctxt "menu"
 msgid "CiviContribute Dashboard"
@@ -262,6 +258,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr "Financiële types"
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr "Nieuwe betaling"
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -279,9 +279,15 @@ msgstr "Geaccepteerde creditcards"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr "Typen dankbetuigingen"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Bijdragen"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr "Terugkerende bijdragen"
@@ -333,6 +339,23 @@ msgctxt "menu"
 msgid "Accounting Batch Export"
 msgstr "Boekhoudbatch exporteren"
 
+msgctxt "menu"
+msgid "View Payment"
+msgstr "Betaling weergeven"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr "Onderdeelinstellingen CiviContribute"
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr "PDF-factuur"
+
+msgctxt "menu"
+msgid "Email Invoice"
+msgstr "Factuur e-mailen"
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Personal Campaign Pages"
@@ -362,7 +385,7 @@ msgstr "Aangepaste gegevens"
 
 msgctxt "menu"
 msgid "Custom Data Fields"
-msgstr "Aangepaste gegevensvelden"
+msgstr "Eigen gegevensvelden"
 
 msgctxt "menu"
 msgid "Custom Field - Options"
@@ -412,12 +435,12 @@ msgstr "Profielinstellingen"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Tags (Categories)"
-msgstr "Kenmerken (categorieën)"
+msgstr "Kenmerken (tags)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "New Tag"
-msgstr "Nieuw kenmerk"
+msgstr "Kenmerk toevoegen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -485,6 +508,11 @@ msgstr "Zoekvoorkeuren"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr "Datumvoorkeuren"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr "Navigatiemenu"
 
@@ -518,10 +546,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr "Herinneringen plannen"
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "Dit zou nooit gezien mogen worden"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -539,6 +563,11 @@ msgstr "Paginaformaten voor afdrukken (PDF's)"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr "Communicatiestijlen"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr "Opmaak e-mailaanhef"
 
@@ -552,9 +581,10 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr "Adresseringsopmaak"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
-msgstr "Taal, valuta, locatie"
+msgid "Languages, Currency, Locations"
+msgstr "Talen, valuta, locaties"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -705,10 +735,6 @@ msgid "Administer CiviCRM"
 msgstr "CiviCRM beheren"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "Keuzewaarden"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Prijssets"
 
@@ -778,10 +804,6 @@ msgid "Custom Searches"
 msgstr "Aangepaste zoekopdrachten"
 
 msgctxt "menu"
-msgid "Simple Search"
-msgstr "Eenvoudig zoeken"
-
-msgctxt "menu"
 msgid "New Contact"
 msgstr "Nieuw contact"
 
@@ -814,11 +836,11 @@ msgstr "Contact e-mailen"
 
 msgctxt "menu"
 msgid "Map Location(s)"
-msgstr "Locatie(s) op de kaart zetten"
+msgstr "Locatie(s) op de kaart tonen"
 
 msgctxt "menu"
 msgid "Map Event Location"
-msgstr "Evenementlocatie op de kaart zetten"
+msgstr "Evenementlocatie op de kaart tonen"
 
 msgctxt "menu"
 msgid "Contact Summary"
@@ -869,6 +891,10 @@ msgstr "Dashlet Activiteiten"
 msgctxt "menu"
 msgid "CiviCRM Blog"
 msgstr "CiviCRM-blog"
+
+msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Dashlet"
@@ -925,6 +951,10 @@ msgid "Import Activities"
 msgstr "Activiteiten importeren"
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr "Aangepaste gevens met meerdere waarden importeren"
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "CiviCRM upgraden"
 
@@ -961,12 +991,16 @@ msgid "Browse Uploaded files"
 msgstr "Geüploade bestanden doorbladeren"
 
 msgctxt "menu"
-msgid "Delete file"
+msgid "Delete File"
 msgstr "Bestand verwijderen"
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Afmelden"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr "CiviCRM-API"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -980,6 +1014,10 @@ msgstr "QUnit"
 msgctxt "menu"
 msgid "ProfileEditor"
 msgstr "ProfielBewerker"
+
+msgctxt "menu"
+msgid "Confirm dates"
+msgstr "Datums bevestigen"
 
 msgctxt "menu"
 msgid "CiviCRM Profile Create"
@@ -1076,6 +1114,10 @@ msgid "Event Online Registration"
 msgstr "Online aanmelden voor evenement"
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr "Evenement herhalen"
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr "Conferentietijdvakken"
 
@@ -1111,6 +1153,10 @@ msgid "View Cart"
 msgstr "Winkelwagen weergeven"
 
 msgctxt "menu"
+msgid "Change Registration Selections"
+msgstr "Aanmeldingenselecties wijzigen"
+
+msgctxt "menu"
 msgid "CiviGrant Dashboard"
 msgstr "CiviGrant-dashboard"
 
@@ -1132,7 +1178,7 @@ msgstr "CiviMail"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Mailer Settings"
-msgstr "E-mailprogramma-instellingen"
+msgstr "Mailverzending instellen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1163,7 +1209,7 @@ msgid "Resubscribe"
 msgstr "Opnieuw abonneren"
 
 msgctxt "menu"
-msgid "Optout"
+msgid "Opt-out"
 msgstr "Uitschrijven"
 
 msgctxt "menu"
@@ -1302,6 +1348,11 @@ msgstr "CiviCRM-nieuws"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Getting Started"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "My Cases"
 msgstr "Mijn dossiers"
 
@@ -1343,7 +1394,7 @@ msgstr "Nieuwe e-mail"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Manage Tags (Categories)"
-msgstr "Kenmerken (categorieën) beheren"
+msgstr "Kenmerken (tags) beheren"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1437,6 +1488,16 @@ msgstr "Massa-SMS zoeken"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr "Nieuwe A/B-test"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr "A/B-testen beheren"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr "Lidmaatschapsrapporten"
 
@@ -1513,7 +1574,7 @@ msgstr "Gegevens en schermen aanpassen"
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Custom Fields"
-msgstr "Aangepaste velden"
+msgstr "Eigen velden"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1542,11 +1603,6 @@ msgstr "Lokalisatie"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr "Talen, valuta, locaties"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr "Voorkeurstalen instellen"
 
@@ -1564,6 +1620,11 @@ msgstr "Machtigingen (toegangsbeheer)"
 msgctxt "menu"
 msgid "System Settings"
 msgstr "Systeeminstellingen"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1632,6 +1693,11 @@ msgstr "CiviGrant"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr "Toelagestatus"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr "CiviMember"
 
@@ -1642,8 +1708,13 @@ msgstr "Alle rapporten"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
-msgstr "Help"
+msgid "Support"
+msgstr "Ondersteuning"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
+msgstr "De eerste stappen"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1652,18 +1723,43 @@ msgstr "Documentatie"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
-msgstr "Forums"
+msgid "Ask a question"
+msgstr "Stel een vraag"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
-msgstr "Deelnemen"
+msgid "Get expert help"
+msgstr "Vind een expert"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
+msgid "About CiviCRM"
 msgstr "Over CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr "Registreer uw website"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr "Steun CiviCRM"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr "Voor ontwikkelaars"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr "API-explorer"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
+msgstr "Documentatie voor ontwikkelaars"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -1890,6 +1986,11 @@ msgstr "Geeft details van transacties voor alle bijdragen en betalingen inclusie
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr "Geeft informatie over de status van periodieke betalingen"
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr "Samenvatting lidmaatschappen"
 
@@ -2059,144 +2160,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr "Rapport met detailinformatie voor stemmenwerving, belrondes, looprondes of andere enquêtes."
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Case Activity Audit"
-msgstr "Dossieractiviteitsonderzoek"
+msgid "Payment Methods"
+msgstr ""
 
 msgctxt "menu"
-msgid "New Payment"
-msgstr "Nieuwe betaling"
+msgid "Configure CKEditor"
+msgstr ""
+
+msgctxt "menu"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
+
+msgctxt "menu"
+msgid "Insert CiviCRM Content"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr "Typen dankbetuigingen"
-
-msgctxt "menu"
-msgid "View Payment"
-msgstr "Betaling weergeven"
+msgid "System Status"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Communication Style Options"
-msgstr "Communicatiestijlen"
-
-msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr "Aangepaste gevens met meerdere waarden importeren"
-
-msgctxt "menu"
-msgid "Change Registration Selections"
-msgstr "Aanmeldingenselecties wijzigen"
+msgid "Components"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Grant Status"
-msgstr "Toelagestatus"
+msgid "Extensions"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer"
-msgstr "Voor ontwikkelaars"
+msgid "Activity Details"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "API Explorer"
-msgstr "API-explorer"
+msgid "Activity Summary"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer Docs"
-msgstr "Documentatie voor ontwikkelaars"
-
-msgctxt "menu"
-msgid "File on Case"
-msgstr "Bestand van dossier"
+msgid "Shows activity statistics by type / date"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr "Onderdeelinstellingen CiviContribute"
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr "PDF-factuur"
-
-msgctxt "menu"
-msgid "Email Invoice"
-msgstr "Factuur e-mailen"
+msgid "Pledge Detail"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Date Preferences"
-msgstr "Datumvoorkeuren"
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr "Bestand verwijderen"
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr "CiviCRM-API"
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr "Datums bevestigen"
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr "Evenement herhalen"
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr "Uitschrijven"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "New A/B Test"
-msgstr "Nieuwe A/B-test"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr "A/B-testen beheren"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
-msgstr "Ondersteuning"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get started"
-msgstr "De eerste stappen"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Ask a question"
-msgstr "Stel een vraag"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get expert help"
-msgstr "Vind een expert"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
-msgstr "Over CiviCRM"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
-msgstr "Registreer uw website"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Join CiviCRM"
-msgstr "Steun CiviCRM"
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
-msgstr "Geeft informatie over de status van periodieke betalingen"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
+msgstr ""
