--- a/po/pl_PL/grant.po
+++ b/po/pl_PL/grant.po
@@ -10,10 +10,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:54-0400\n"
-"PO-Revision-Date: 2015-05-18 07:15+0000\n"
-"Last-Translator: Piotr Kaczyński <www@skrzydla.lublin.pl>\n"
-"Language-Team: Polish (http://www.transifex.com/projects/p/civicrm/language/pl/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Polish (http://www.transifex.com/civicrm/civicrm/language/pl/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -39,14 +39,6 @@ msgstr "Data przyznania dotacji jest PUSTA"
 #: CRM/Grant/BAO/Query.php
 msgid "Grant Decision Date is NULL"
 msgstr "Data decyzji o dotacji jest PUSTA"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Type %2 %1"
-msgstr "Typ dotacji %2 %1"
-
-#: CRM/Grant/BAO/Query.php
-msgid "Grant Status %2 %1"
-msgstr "Status dotacji %2 %1"
 
 #: CRM/Grant/BAO/Query.php
 msgid "App. Received Date - From"
@@ -93,10 +85,6 @@ msgid "Grant report received"
 msgstr "Raport o dotacji przyjęty"
 
 #: CRM/Grant/DAO/Grant.php
-msgid "Grant Type Id"
-msgstr "Numer identyfikacyjny typu dotacji"
-
-#: CRM/Grant/DAO/Grant.php
 msgid "Amount granted"
 msgstr "Przyznana kwota"
 
@@ -108,10 +96,6 @@ msgstr "Waluta dotacji"
 msgid "Grant Rationale"
 msgstr "Uzasadnienie Dotacji"
 
-#: CRM/Grant/DAO/Grant.php
-msgid "Grant Status Id"
-msgstr "Numer identyfikacyjny statusu dotacji"
-
 #: CRM/Grant/Form/Grant.php templates/CRM/Grant/Form/GrantView.tpl
 msgid "Grant Report Received?"
 msgstr "Przyjęto raport dotacji?"
@@ -119,6 +103,10 @@ msgstr "Przyjęto raport dotacji?"
 #: CRM/Grant/Form/Grant.php
 msgid "Amount Requested<br />(original currency)"
 msgstr "Oczekiwana kwota<br />(pierwotna waluta)"
+
+#: CRM/Grant/Form/Grant.php
+msgid "Applicant"
+msgstr "Wnioskodawca"
 
 #: CRM/Grant/Form/Search.php
 msgid "Find Grants"
@@ -129,12 +117,11 @@ msgid "Delete Grants"
 msgstr "Usuń dotację"
 
 #: CRM/Grant/Form/Task/Delete.php
-msgid "Deleted Grant(s): %1"
-msgstr "Usunięte dotacje: %1"
-
-#: CRM/Grant/Form/Task/Delete.php CRM/Grant/Form/Task/Update.php
-msgid "Total Selected Grant(s): %1"
-msgstr "Wszystkie zaznaczone dotacje: %1"
+msgid "%count grant deleted."
+msgid_plural "%count grants deleted."
+msgstr[0] "% usunięta dotacja."
+msgstr[1] "% usunięte  dotacje."
+msgstr[2] "% usuniętych dotacji."
 
 #: CRM/Grant/Form/Task/Print.php
 msgid "Print Grant List"
@@ -145,30 +132,46 @@ msgid "Update Grants"
 msgstr "Aktualizuj dotacje"
 
 #: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1"
-msgstr "Zaktualizowane dotacje: %1"
+msgid "Updated Grant(s): %1 (Total Selected: %2)"
+msgstr "Aktualizuj Dotację: %1 (liczba wybranych: %2)"
+
+#: CRM/Grant/Info.php
+msgid "access CiviGrant"
+msgstr "dostęp do CiviGrant"
+
+#: CRM/Grant/Info.php
+msgid "View all grants"
+msgstr "Zobacz wszystkie dotacje"
+
+#: CRM/Grant/Info.php
+msgid "edit grants"
+msgstr "Edytuj dotacje"
+
+#: CRM/Grant/Info.php
+msgid "Create and update grants"
+msgstr "Utworz i aktualizuj dotacje"
+
+#: CRM/Grant/Info.php
+msgid "delete in CiviGrant"
+msgstr "usunąć w CiviGrant"
+
+#: CRM/Grant/Info.php
+msgid "Delete grants"
+msgstr "Usuń dotacje"
 
 #: CRM/Grant/Page/DashBoard.php
 msgid "grants"
 msgstr "dotacje"
 
-#: CRM/Grant/Page/Tab.php
-msgid "Grant by"
-msgstr "Dotacja udzielona przez"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/GrantView.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "View Grant"
 msgstr "Zobacz dotację"
 
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
+#: CRM/Grant/Selector/Search.php
 msgid "Edit Grant"
 msgstr "Edytuj dotację"
 
 #: CRM/Grant/Selector/Search.php
-msgid "Are you sure you want to delete this grant?"
-msgstr "Czy na pewno chcesz usunąć tę dotację?"
-
-#: CRM/Grant/Selector/Search.php templates/CRM/Grant/Form/Grant.tpl
 msgid "Delete Grant"
 msgstr "Usuń dotację"
 
@@ -181,16 +184,8 @@ msgid "Granted"
 msgstr "Przyznane"
 
 #: CRM/Grant/Task.php
-msgid "Print Grants"
-msgstr "Drukuj dotację"
-
-#: CRM/Grant/Task.php
 msgid "Export Grants"
 msgstr "Eksportuj dotację"
-
-#: templates/CRM/Grant/Form/Grant.tpl
-msgid "New Grant"
-msgstr "Udziel wsparcia"
 
 #: templates/CRM/Grant/Form/Grant.tpl
 msgid "Are you sure you want to delete this Grant?"
@@ -211,6 +206,14 @@ msgstr "Data transferu pieniędzy przyznanych w dotacji."
 #: templates/CRM/Grant/Form/GrantView.tpl
 msgid "(original currency)"
 msgstr "(pierwotna waluta)"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Status(s)"
+msgstr "Status(y) Dotacji"
+
+#: templates/CRM/Grant/Form/Search/Common.tpl
+msgid "Grant Type(s)"
+msgstr "Typ(-y) dotacji"
 
 #: templates/CRM/Grant/Form/Search/Common.tpl
 msgid "Date is not set"
@@ -304,62 +307,17 @@ msgid "This page lists all grants for %1 since inception."
 msgstr "Ta strona zawiera listę wszystkich dotacji dla %1 od momentu zaistnienia."
 
 #: templates/CRM/Grant/Page/Tab.tpl
-msgid ""
-"Click <a accesskey='N' href='%1'>Add Grant</a> to record a Grant for this "
-"contact."
-msgstr "Kliknij <a accesskey='N' href='%1'>Dodaj dotację</a>, aby przyporządkować dotację do tego kontaktu."
+msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
+msgstr "Kliknij <a %1>Dodaj Dotację</a> aby zapisać Dotację dla tego kontaktu."
 
 #: templates/CRM/Grant/Page/Tab.tpl
 msgid "No grants have been recorded for this contact."
 msgstr "Nie przyporządkowano żadnej dotacji do tego kontaktu."
 
-#: CRM/Grant/Form/Grant.php
-msgid "Applicant"
-msgstr "Wnioskodawca"
+#: CRM/Grant/Task.php
+msgid "Export grants"
+msgstr ""
 
-#: CRM/Grant/Form/Task/Update.php
-msgid "Updated Grant(s): %1 (Total Selected: %2)"
-msgstr "Aktualizuj Dotację: %1 (liczba wybranych: %2)"
-
-#: templates/CRM/Grant/Page/Tab.tpl
-msgid "Click <a %1>Add Grant</a> to record a Grant for this contact."
-msgstr "Kliknij <a %1>Dodaj Dotację</a> aby zapisać Dotację dla tego kontaktu."
-
-#: CRM/Grant/Form/Task/Delete.php
-msgid "%count grant deleted."
-msgid_plural "%count grants deleted."
-msgstr[0] "% usunięta dotacja."
-msgstr[1] "% usunięte  dotacje."
-msgstr[2] "% usuniętych dotacji."
-
-#: CRM/Grant/Info.php
-msgid "access CiviGrant"
-msgstr "dostęp do CiviGrant"
-
-#: CRM/Grant/Info.php
-msgid "View all grants"
-msgstr "Zobacz wszystkie dotacje"
-
-#: CRM/Grant/Info.php
-msgid "edit grants"
-msgstr "Edytuj dotacje"
-
-#: CRM/Grant/Info.php
-msgid "Create and update grants"
-msgstr "Utworz i aktualizuj dotacje"
-
-#: CRM/Grant/Info.php
-msgid "delete in CiviGrant"
-msgstr "usunąć w CiviGrant"
-
-#: CRM/Grant/Info.php
-msgid "Delete grants"
-msgstr "Usuń dotacje"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Status(s)"
-msgstr "Status(y) Dotacji"
-
-#: templates/CRM/Grant/Form/Search/Common.tpl
-msgid "Grant Type(s)"
-msgstr "Typ(-y) dotacji"
+#: CRM/Grant/Task.php
+msgid "Update grants"
+msgstr ""
